--- a/site veb 1.html
+++ b/site veb 1.html
@@ -21,6 +21,8 @@
             <li><a href="#home">Главная</a></li>
             <li><a href="#about">О нас</a></li>
             <li><a href="#categories">Категории</a></li>
+            <li><a href="appeal.html">Обращения</a></li>
+        <li><a href="registration.html">Регистрация</a></li>
         </ul>
     </nav>
 
